2012-05-20  Khaled Hosny  <khaledhosny@eglug.org>

	* tex/mlist.w: fix "warning: 'ext' might be used uninitialized".

2012-05-18  Taco Hoekwater  <taco@luatex.org>

	* lua/ltexlib.c: fix a ConTeXt crash on `\endinput \end`.

2012-05-18  Khaled Hosny  <khaledhosny@eglug.org>

	* tex/commands.h, tex/commands.w, tex/maincontrol.h,
	tex/maincontrol.w, tex/mathcodes.h, tex/mathcodes.w, tex/scanning.w, 
	tex/texmath.w, tex/mlist.w: backport math relatex changes from 0.71
	* luatex.c: bump version to 0.70.1

2012-05-10  Hartmut Henkel  <hartmut@luatex.org>
	and Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lepdflib.cc: Adapt for poppler 0.19.4.

2012-05-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (lua_initialize): Use WEB2CVERSION.
	* tex/printing.w (print_banner, log_banner): Same.

2012-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.h: Remove definition of WRITE_OUT, now in ../cpascal.h.

2012-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/writejbig2.w (getstreamlen): Change type to `off_t'.
	Use LONGINTEGER_TYPE and LONGINTEGER_PRId for printing.

2012-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Consistent support for large JBIG2 files.
	* image/writejbig2.w: Change type of various struct members, local
	variables and findstreamstart() from `long' or `unsigned long'
	to `off_t'.  Do not use xfseek and xfseeko for the same file.

2011-10-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lepdflib.cc: Test poppler 0.16.x / 0.17.x features.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am: Avoid to `clean' ../mplibdir/lmplib.c.

	* am/txt2zlib.am (noinst_PROGRAMS): Conditionally add txt2zlib,
	such that txt2zlib$(EXEEXT) gets cleaned.

2011-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/printing.w (print_file_line): Bug fix: avoid uninitialized
	lineno - from ../tex.ch.
	* tex/inputstack.w: Slightly reformulate printing of current
	line - from ../etexdir/etex.ch.
