@@ -21,8 +21,8 @@ static const char _svn_version[] =
     "$Id: lstatslib.c 3477 2010-03-12 13:59:34Z taco $ "
     "$URL: http://foundry.supelec.fr/svn/luatex/tags/beta-0.66.0/source/texk/web2c/luatexdir/lua/lstatslib.c $";
 
-#include "lua/luatex-api.h"
 #include "ptexlib.h"
+#include "lua/luatex-api.h"
 
 typedef struct statistic {
     const char *name;
